# housing-elements

./: .gitattributes  .gitignore  Data sources.md  Final results.ipynb  Los Angeles city.ipynb  README.md  SF Housing Element.ipynb  San Jose Housing Element.ipynb  San Jose permits cleaning.ipynb  Test helper functions - ABAG permits dataset.ipynb  all_matches_cache.pkl  ground_truth_cities_with_permits_cache.pkl  permits_cleaning_eda.ipynb  pyproject.toml  run_additional_results_only.sh  run_ground_truth_results_only.sh  run_map_results_only.sh  run_plots_only.sh  run_results.sh  run_results_faster.sh  run_results_faster_matches_cache.sh
clean_data/: sf_all_construction.csv  sf_construction_post_2015.csv  sf_sites.csv
data/: geocode_cache.json
data_cleaning_notebooks/: Los Altos Housing Element.ipynb  SF Housing Element.ipynb  San Jose permits cleaning.ipynb  permits_cleaning_eda.ipynb
housing_elements/: analysis_utils.py  appendix_A.ipynb  cover.ipynb  data_loading_utils.py  final_results.py  geocode_cache.py  los_altos_permits.py  map_utils.py  parallel_utils.py  plot_utils.py  san_francisco_permits.py  san_jose_permits.py  utils.py
map_results/: summary.json  summary_centroids.geojson
results/: apn_matching_results.csv  apn_or_geo_matching_0ft_results.csv  apn_or_geo_matching_100ft_results.csv  apn_or_geo_matching_10ft_results.csv  apn_or_geo_matching_15m_results.csv  apn_or_geo_matching_1m_results.csv  apn_or_geo_matching_25ft_results.csv  apn_or_geo_matching_30m_results.csv  apn_or_geo_matching_50ft_results.csv  apn_or_geo_matching_5ft_results.csv  (+27 more)
(+504 files in other folders)
