[tool.poetry]
name = "housing-elements"
version = "0.1.0"
description = ""
authors = ["Sidharth Kapur <sidharthkapur1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.0.5"
pandas = "^1.2.1"
geopandas = "^0.8.1"
matplotlib = "^3.3.3"
descartes = "^1.1.0"
contextily = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
